--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
   "name": "axie-board",
-  "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -9,14 +8,15 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "11.1.2",
+    "next": "12.0.4",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
-    "@types/react": "17.0.30",
-    "eslint": "8.0.1",
-    "eslint-config-next": "11.1.2",
-    "typescript": "4.4.4"
+    "@types/node": "16.11.10",
+    "@types/react": "17.0.36",
+    "eslint": "7",
+    "eslint-config-next": "12.0.4",
+    "typescript": "4.5.2"
   }
 }
